# gfysplit

./: .gitignore  CMakeLists.txt
src/: main.cpp
